ref #5 Cadastrando e editando msg default, formulario do email usa a msg defaul com a configuração: TODO: pequenos ajustes e Salvar o envio para poder controlar

--- a/escolar/comunicacao/templates/comunicacao/msg_default_list.html
+++ b/escolar/comunicacao/templates/comunicacao/msg_default_list.html
@@ -28,7 +28,7 @@
         </thead>
         {% for object in msg_default_qs %}
           <tr>
-            <td>{{ object.get_tipo_display }}</td>
+            <td><a href="{% url 'msg_default_form' escola.pk object.id %}">{{ object.get_tipo_display }}</a></td>
             <td>{{ object.titulo }}</td>
           </tr>
         {% empty %}
