--- a/escolar/comunicacao/templates/comunicacao/msg_default_form.html
+++ b/escolar/comunicacao/templates/comunicacao/msg_default_form.html
@@ -33,7 +33,9 @@
             <div class="col-xs-12 col-sm-9 col-md-6">
               {% bootstrap_field form.tipo %}
               {% bootstrap_field form.titulo %}
+              Não remova os <b>{</b>conteudo<b>}</b> nem edite o conteúdo
               {% bootstrap_field form.cabecalho %}
+              Não remova os <b>{</b>conteudo<b>}</b> nem edite o conteúdo
               {% bootstrap_field form.corpo %}
               {% bootstrap_field form.assinatura %}
             </div>
