ref #5 Criaa tabela de mensagem e a tabela de controle: PessoaMensagem cria os mtodos para guardar a mensagem enviada e o os dados do destinatário, mostra quando foi enviada a última mensagem para o inandinplente

--- a/escolar/financeiro/templates/financeiro/inadimplentes_list.html
+++ b/escolar/financeiro/templates/financeiro/inadimplentes_list.html
@@ -113,7 +113,8 @@
             {% endif %}
           </td>
           <td>
-            {{ pagamento.ano }}
+            {{ pagamento.ano }}<br>
+            <b>Cobrado:</b>{{ pagamento.get_data_ultima_cobranca|date:'d/m/Y'|default:"--"}}
           </td>
           <td>
              <a href="#"
@@ -149,7 +150,6 @@
   <script type="text/javascript">
     function sumDebitos(pk){
       let id = pk;
-      console.log("ID", id)
       let valor = document.getElementById("valor_id_"+id).innerText.slice(2,).replace('.', '');
       let multa = document.getElementById("multa_id_"+id).innerText.slice(2,).replace('.', '');
       let juros = document.getElementById("juros_id_"+id).innerText.slice(2,).replace('.', '');
