--- a/escolar/comunicacao/templates/comunicacao/email_cobranca.html
+++ b/escolar/comunicacao/templates/comunicacao/email_cobranca.html
@@ -13,7 +13,7 @@
   <!-- TODO erver esse br -->
   <br>
     {% if escola %}
-        {{ escola.nome }} - <small> Email:</small>  <small>Quanto genérico isso deve ser?</small>
+        {{ escola.nome }} - <small> Email de cobrança e solicitação de contato</small>
     {% else %}
         generico
     {% endif %}
