--- a/escolar/comunicacao/templates/comunicacao/msg_default_list.html
+++ b/escolar/comunicacao/templates/comunicacao/msg_default_list.html
@@ -5,7 +5,7 @@
   <div class="page-header">
   <!-- TODO erver esse br -->
   <br>
-    Mensgens Default: <small>Usadas na comunicação escola membros</small> 
+    Mensgens Default: <small>Usadas na comunicação da escola com professores, pais e alunos</small> 
   </div>
 {% endblock page_title %}
 
