ref #7 cria o campo data_pag como está na views do modal de pagamento; disponibiliza a data no formulário de pagamento, se não preenche e setar pago, será preenchido auto maticamente

--- a/escolar/financeiro/templates/financeiro/pagamentos_aluno_list.html
+++ b/escolar/financeiro/templates/financeiro/pagamentos_aluno_list.html
@@ -48,7 +48,8 @@
     <thead>
       <tr>
         <th>Título</th>
-        <th>Data</th>
+        <th>Data Prevista</th>
+        <th>Data Efetivado</th>
         <th>Valor</th>
         <th>Responsável/<br>Aluno</th>
         <th>Forma de <br>Pagamento</th>
@@ -66,6 +67,7 @@
             <font color="red">R$ {{ total|numberformat_br }}</font>
           {% endif %}
         </td>
+        <td></td>
         <td></td>
         <td></td>
       </tr>
@@ -91,7 +93,9 @@
             <small>Juros R$ {{ pagamento.get_juros|numberformat_br }} </small>
           {% endif %}
         </td>
-
+        <td>
+          {{ pagamento.data_pag|date:'d/m/Y' }}
+        </td>
         <td>
           <font color="{{ pagamento.get_color_display }}">R$ {{ pagamento.valor|numberformat_br }}</font>
           {% if pagamento.categoria.id == 1 and not pagamento.efet %}
