--- a/escolar/financeiro/templates/financeiro/pagamentos_list.html
+++ b/escolar/financeiro/templates/financeiro/pagamentos_list.html
@@ -73,7 +73,8 @@
     <thead>
       <tr>
         <th>Título</th>
-        <th>Data</th>
+        <th>Data Prevista</th>
+        <th>Data Efetivado</th>
         <th>Valor</th>
         <th>Categoria</th>
         <th>Responsável/<br>Aluno</th>
@@ -111,17 +112,15 @@
             {% endif%}
           </td>
           <td>
-            {% if pagamento.efet %}
-              {{ pagamento.data_pag|date:'d/m/Y' }}
-            {% else %}
-              {{ pagamento.data|date:'d/m/Y' }}
-            {% endif %}
+            {{ pagamento.data|date:'d/m/Y' }}
             {% if pagamento.atrasado %}
               <br>
               <small>Juros R$ {{ pagamento.get_juros|numberformat_br }} </small>
             {% endif %}
           </td>
-
+          <td>
+            {{ pagamento.data_pag|date:'d/m/Y' }}
+          </td>
           <td>
             <font color="{{ pagamento.get_color_display }}">R$ {{ pagamento.valor|numberformat_br }}</font>
             {% if pagamento.efet and pagamento.taxa_cartao %}
