Cria novo filtro para o financeiro e ordena pela data do pagamento

--- a/escolar/financeiro/templates/financeiro/pagamentos_list.html
+++ b/escolar/financeiro/templates/financeiro/pagamentos_list.html
@@ -48,6 +48,11 @@
       <div class="form-group">
         {% bootstrap_field form.forma_pgto %}
       </div>
+      <p></p>
+      <div class="form-group">
+        {% bootstrap_field form.todas_ou_sem %}
+      </div>
+
 
       <button type="submit" class="btn btn-primary" title="Filtrar"><i class="glyphicon glyphicon-search"></i></button>
       <a class="btn btn-small btn-info" href="." title="Apagar o filtro e listar todos"><i class="glyphicon glyphicon-remove-circle"></i></a>
