ref #7 ordena os Pagamentos pela data_pag todo pagamento vai ser criado com a data de pagaemnto efetivado igual a data prevista. Não mostra a data do pag efetivado nas listagens, se o efet for false Se abriu o formulário pela  liistagem de pagamentos vair depois do save retorna para mesma listagem se abrir o formulário pela listagem dos pagamentos do alino vai voltar para essa listagem específica Altera o filtro e o carregamento iniicial dos pagamentos para considerar a data_pag p ini e fim

--- a/escolar/financeiro/templates/financeiro/pagamentos_aluno_list.html
+++ b/escolar/financeiro/templates/financeiro/pagamentos_aluno_list.html
@@ -94,7 +94,9 @@
           {% endif %}
         </td>
         <td>
-          {{ pagamento.data_pag|date:'d/m/Y' }}
+          {% if pagamento.efet %}
+            {{ pagamento.data_pag|date:'d/m/Y' }}
+          {% endif %}
         </td>
         <td>
           <font color="{{ pagamento.get_color_display }}">R$ {{ pagamento.valor|numberformat_br }}</font>
