--- a/escolar/financeiro/templates/financeiro/pagamento_confirm_modal.html
+++ b/escolar/financeiro/templates/financeiro/pagamento_confirm_modal.html
@@ -11,12 +11,11 @@
         <p id="forma_pagto"></p>
         <h2 id="new_valor"></h2>
         <p>Valor previsto: R$ {{ form.instance.get_valor_a_pagar|numberformat_br }}</p>
-        {% csrf_token %}
         <p id="gerar_parcela"></p>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
-        <input type="submit" value="Salvar" class="btn btn-primary">
+        <input type="submit" value="Salvar" class="btn btn-primary" onclick="gerarParcelaAdicional();">
       </div>
     </div>
   </div>
