--- a/escolar/financeiro/templates/financeiro/pagamento_form.html
+++ b/escolar/financeiro/templates/financeiro/pagamento_form.html
@@ -154,6 +154,7 @@
         } else {
           pTagColor = '<p style="color:green;">'
         }
+        
 
         document.getElementById("efetivado_ou_nao").innerHTML  = '<small> '+ pago +'</small>' + '</p>';
         document.getElementById("forma_pagto").innerHTML  = formaPagamento;
@@ -161,6 +162,10 @@
         document.getElementById("gerar_parcela").innerHTML = gerarParcela;
         document.getElementById("date_id").defaultValue = hoje.toISOString().split('T')[0];
         document.getElementById("parcela_adicional_id").defaultValue = diferenca.toFixed(2);
+
+      }
+      function gerarParcelaAdicional(){
+        console.log("CHAMOU!!!!");
       }
     </script>
     {{ form.media.js }}
