--- a/escolar/financeiro/templates/financeiro/pagamento_form.html
+++ b/escolar/financeiro/templates/financeiro/pagamento_form.html
@@ -143,10 +143,10 @@
         let gerarParcela = ''
 
         if (diferenca > 0) {
-          gerarParcela = '<input type="checkbox" id="Parcela_extra" name="parcelaAdicioanl">\
+          gerarParcela = '<input class="messageCheckbox" type="checkbox" id="id_parcela_extra_bool" name="parcelaAdicioanl">\
                             <label for="horns"> Gerar parcela complementar para: </label>'
-          gerarParcela += '<input id="date_id" type="date" value=new Date()>'
-          gerarParcela += '<input id="parcela_adicional_id" type=number step=any />Parcela adicioanal<br />'
+          gerarParcela += '<input id="date_id" type="date" value=new Date() required >'
+          gerarParcela += '<input id="parcela_adicional_id" type=number step=any required >Parcela adicioanal<br />'
         }
 
         if (reference != preenchido) {
@@ -163,9 +163,23 @@
         document.getElementById("date_id").defaultValue = hoje.toISOString().split('T')[0];
         document.getElementById("parcela_adicional_id").defaultValue = diferenca.toFixed(2);
 
-      }
+      };
       function gerarParcelaAdicional(){
-        console.log("CHAMOU!!!!");
+        let gerarParcela =  document.querySelector('.messageCheckbox:checked');
+        let dataParcela = $('#date_id').val();
+        let valorParcela = $('#parcela_adicional_id').val();
+
+        if (gerarParcela != null) {
+          console.log("gerar sim", dataParcela, valorParcela);
+          /*
+          DESCOBRIR o id da parcela Atual, que está sendo fracionada
+          chamar uma viwes passando:
+          parcela_data:dataParcela, parcela_valor:valorParcela
+
+          */
+        } else {
+          console.log("NULL");
+        }        
       }
     </script>
     {{ form.media.js }}
