--- a/escolar/sites/templates/sites/conteudo_form.html
+++ b/escolar/sites/templates/sites/conteudo_form.html
@@ -13,7 +13,13 @@
   <!-- TODO erver esse br -->
   <br>
     {% if escola %}
-        {{ escola.nome }} - <small>Conteúdo do site: {{ form.instance.chave }} </small>
+        {{ escola.nome }} - 
+        <small>
+          Conteúdo do site 
+          {% if form.instance %}
+           - chave: {{ form.instance.chave }}
+          {% endif %} 
+        </small>
     {% else %}
         generico
     {% endif %}
