--- a/escolar/core/templates/nav_gestor.html
+++ b/escolar/core/templates/nav_gestor.html
@@ -54,6 +54,7 @@
                       <li class="{{ tab_grupos }}"><a href="{% url 'grupos_list' escola.id %}" id='id_grupos'>Grupos</a></li>
                       <li class="{{ tab_mensagem_default }}"><a href="{% url 'msg_default_list' escola.id %}" >Mensagens Default</a></li>
                       <li class="{{ tab_parametros }}"><a href="{% url 'parametros_contrato_list' escola.id %}" title="{{ section.name }}">Parâmetros dos Contratos</a></li>
+                      <li class="{{ tab_site }}"><a href="{% url 'conteudo_list' escola.id %}" title="{{ section.name }}">Site: Gestão de conteúdo</a></li>
                       </li>
                       <!-- <li><a href="" title="{{ section.name }}">Cartões</a></li> -->
                     </ul>
