--- a/escolar/sites/templates/sites/conteudo_form.html
+++ b/escolar/sites/templates/sites/conteudo_form.html
@@ -51,7 +51,7 @@
         {% if can_edit %}
           <input type="submit" value="Salvar" class="btn btn-primary">
         {% endif %}
-        <a href="{% url 'msg_default_list' escola.id %}" class="btn btn-secondary">Voltar para lista de Conteúdos</a>
+        <a href="{% url 'conteudo_list' escola.id %}" class="btn btn-secondary">Voltar para lista de Conteúdos</a>
       </div>
     </form>
   </div>
