--- a/escolar/sites/templates/sites/conteudo_list.html
+++ b/escolar/sites/templates/sites/conteudo_list.html
@@ -24,6 +24,9 @@
           <tr>
             <th>Chave</th>
             <th>Título</th>
+            <th>Texto</th>
+            <th>link</th>
+            <th>Foto</th>
           </tr>
         </thead>
         {% for object in conteudo_qs %}
@@ -32,6 +35,7 @@
             <td>{{ object.titulo }}</td>
             <td>{{ object.texto }}</td>
             <td>{{ object.link }}</td>
+            <td>{{ object.foto }}</td>
           </tr>
         {% empty %}
             <tr><td colspan="100%">Nenhum item disponível</td></tr>
