--- a/escolar/sites/templates/sites/conteudo_form.html
+++ b/escolar/sites/templates/sites/conteudo_form.html
@@ -38,6 +38,7 @@
           <div class="row">
             <!-- {# Celular, Tablet, Computador #} -->
             <div class="col-xs-12 col-sm-9 col-md-6">
+              {% bootstrap_field form.ordem %}
               {% bootstrap_field form.chave %}
               {% bootstrap_field form.titulo %}
               {% bootstrap_field form.texto %}
