Coloca mais explicação na listagem dos conteúdos do site

--- a/escolar/sites/templates/sites/conteudo_list.html
+++ b/escolar/sites/templates/sites/conteudo_list.html
@@ -7,6 +7,11 @@
   <br>
     Listagem do Conteúdo<small> Para gerenciamento do conteúdo, fotos, telefone, email, redes sociais... no site</small> 
   </div>
+  <div>
+    <h5>Você pode editar qualquer campo que hoje está peenchido e disponível no formulário</h5>
+    <h5>Preencher um campo que <b>está vazio hoje</b>, não tem efeito nenhum no seu site, pois ele não está preparado para entender esse campo</h5>
+    <h5>Deixar vazio um campo que <b>atualmente está preenchido</b>, vai fazer esse texto sumir do seu site, inclusive menu</h5>
+  </div>
 {% endblock page_title %}
 
 {% block content %}
