--- a/escolar/core/templates/index.html
+++ b/escolar/core/templates/index.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% load numberformat_br %}
 {% block content %}
     {% if user.is_authenticated %}
       <div class="container">
@@ -7,10 +7,82 @@
           <br>
         {% endblock page_title %}
         {% if diretor %}
-          <div class="container">
+          
             <div class="row">
-              <div class="col-md-5">
-                  <div class="panel panel-default" style="height:300px;width:480px;">
+              <div class="panel panel-success">
+                <div class="panel-heading">Entradas {{ mes_corrente }} / {{ ano_corrente }}</div>
+                <div class="panel-body"><small>Previsto, realizado e pendente no mês.</small> </div>
+
+                <!-- Table -->
+                <table class="table" >
+                  <thead>
+                    <tr>
+                      <th style="text-align:center">Previsto</th>
+                      <th style="text-align:center">Realizado</th>
+                      <th style="text-align:center">Pendente</th>
+                    </tr>
+                  </thead>
+                 <tbody>
+                   <tr>
+                     <td style="text-align:center">{{ entradas|numberformat_br }}</td>
+                     <td style="text-align:center">{{ entradas_realizadas|numberformat_br }}</td>
+                     <td style="text-align:center">{{ entradas_pendentes|numberformat_br }}</td>
+                   </tr>
+                 </tbody>
+                  
+                </table>
+              </div>
+
+              <div class="panel panel-danger">
+                <div class="panel-heading">Saídas {{ mes_corrente }} / {{ ano_corrente }}</div>
+                <div class="panel-body"><small>Previsto, realizado e pendente no mês.</small> </div>
+
+                <!-- Table -->
+                <table class="table">
+                  <thead>
+                    <tr>
+                      <th style="text-align:center">Previsto</th>
+                      <th style="text-align:center">Realizado</th>
+                      <th style="text-align:center">Pendente</th>
+                    </tr>
+                  </thead>
+                 <tbody>
+                   <tr>
+                     <td style="text-align:center">{{ saidas|numberformat_br }}</td>
+                     <td style="text-align:center">{{ saidas_realizadas|numberformat_br }}</td>
+                     <td style="text-align:center">{{ saidas_pendentes|numberformat_br }}</td>
+                   </tr>
+                 </tbody>
+                  
+                </table>
+              </div>
+            
+            <div class="panel panel-warning">
+              <div class="panel-heading">Saldo {{ mes_corrente }} / {{ ano_corrente }}</div>
+              <div class="panel-body"><small>Previsto, realizado e pendente no mês.</small> </div>
+
+              <!-- Table -->
+              <table class="table">
+                <thead>
+                  <tr>
+                    <th style="text-align:center">Previsto</th>
+                    <th style="text-align:center">Realizado</th>
+                    <th style="text-align:center">Pendente</th>
+                  </tr>
+                </thead>
+               <tbody>
+                 <tr>
+                   <td style="text-align:center">{{ saldo_previsto|numberformat_br }}</td>
+                   <td style="text-align:center">{{ saldo_realizado|numberformat_br }}</td>
+                   <td style="text-align:center">{{ saldo_pendente|numberformat_br }}</td>
+                 </tr>
+               </tbody>
+                
+              </table>
+            </div>
+<!--             <div class="row">
+
+                  <div class="panel panel-success">
                     <div class="panel-heading">
                       Recebimentos mês {{ mes_corrente }} / {{ ano_corrente }} : meio usado para receber
                     </div>
@@ -18,9 +90,8 @@
                       <div id="chart_div_1"></div>
                     </div>
                   </div>
-              </div>
-              <div class="col-md-5">
-                  <div class="panel panel-default" style="height:300px;width:480px;">
+
+                  <div class="panel panel-danger">
                     <div class="panel-heading">
                       Pagamentos mês {{ mes_corrente }} / {{ ano_corrente }} : meio usado para pagar
                     </div>
@@ -28,8 +99,7 @@
                       <div id="chart_div_2"></div>
                     </div>
                   </div>
-              </div>
-            </div>
+             </div> -->
           </div>
         {% endif %}
     {% else %}
